--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -39,7 +39,7 @@
         <UnitName Value="KaM_Remake"/>
         <CursorPos X="24" Y="6"/>
         <TopLine Value="1"/>
-        <UsageCount Value="28"/>
+        <UsageCount Value="29"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit0>
       <Unit1>
@@ -49,10 +49,10 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="KM_Unit1"/>
-        <CursorPos X="20" Y="664"/>
-        <TopLine Value="647"/>
+        <CursorPos X="7" Y="655"/>
+        <TopLine Value="648"/>
         <EditorIndex Value="8"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit1>
@@ -62,7 +62,7 @@
         <CursorPos X="18" Y="519"/>
         <TopLine Value="511"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="11"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit2>
@@ -73,7 +73,7 @@
         <CursorPos X="27" Y="65"/>
         <TopLine Value="48"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit3>
@@ -106,7 +106,7 @@
         <UnitName Value="KM_TGATexture"/>
         <CursorPos X="28" Y="83"/>
         <TopLine Value="72"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit7>
       <Unit8>
@@ -121,10 +121,10 @@
         <Filename Value="KM_CommonTypes.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_CommonTypes"/>
-        <CursorPos X="22" Y="33"/>
-        <TopLine Value="2"/>
+        <CursorPos X="28" Y="148"/>
+        <TopLine Value="133"/>
         <EditorIndex Value="14"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit9>
@@ -140,7 +140,7 @@
         <UnitName Value="KM_UnitActionGoInOut"/>
         <CursorPos X="30" Y="3"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit11>
       <Unit12>
@@ -149,7 +149,7 @@
         <UnitName Value="KM_UnitActionStay"/>
         <CursorPos X="1" Y="7"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit12>
       <Unit13>
@@ -159,7 +159,7 @@
         <CursorPos X="35" Y="58"/>
         <TopLine Value="47"/>
         <EditorIndex Value="4"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit13>
@@ -170,7 +170,7 @@
         <CursorPos X="29" Y="3362"/>
         <TopLine Value="3345"/>
         <EditorIndex Value="13"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit14>
@@ -180,7 +180,7 @@
         <UnitName Value="KM_Units_WorkPlan"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit15>
       <Unit16>
@@ -190,7 +190,7 @@
         <CursorPos X="47" Y="29"/>
         <TopLine Value="18"/>
         <EditorIndex Value="12"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit16>
@@ -200,7 +200,7 @@
         <UnitName Value="KM_Utils"/>
         <CursorPos X="10" Y="3"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit17>
       <Unit18>
@@ -217,7 +217,7 @@
         <UnitName Value="KM_Controls"/>
         <CursorPos X="50" Y="1083"/>
         <TopLine Value="1069"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit19>
       <Unit20>
@@ -226,7 +226,7 @@
         <UnitName Value="KM_Defaults"/>
         <CursorPos X="1" Y="951"/>
         <TopLine Value="925"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit20>
       <Unit21>
@@ -236,7 +236,7 @@
         <CursorPos X="6" Y="3"/>
         <TopLine Value="1"/>
         <EditorIndex Value="11"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit21>
@@ -249,7 +249,7 @@
         <UnitName Value="KM_Form_Loading"/>
         <CursorPos X="37" Y="10"/>
         <TopLine Value="3"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit22>
       <Unit23>
@@ -259,7 +259,7 @@
         <CursorPos X="32" Y="33"/>
         <TopLine Value="22"/>
         <EditorIndex Value="2"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit23>
@@ -270,7 +270,7 @@
         <CursorPos X="47" Y="1522"/>
         <TopLine Value="1506"/>
         <EditorIndex Value="6"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit24>
@@ -280,7 +280,7 @@
         <UnitName Value="KM_InterfaceGamePlay"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit25>
       <Unit26>
@@ -289,7 +289,7 @@
         <UnitName Value="KM_InterfaceMainMenu"/>
         <CursorPos X="45" Y="8"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit26>
       <Unit27>
@@ -298,7 +298,7 @@
         <UnitName Value="KM_InterfaceMapEditor"/>
         <CursorPos X="1" Y="365"/>
         <TopLine Value="348"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit27>
       <Unit28>
@@ -307,7 +307,7 @@
         <UnitName Value="KM_LoadDAT"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit28>
       <Unit29>
@@ -316,7 +316,7 @@
         <UnitName Value="KM_LoadLib"/>
         <CursorPos X="25" Y="60"/>
         <TopLine Value="48"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit29>
       <Unit30>
@@ -326,7 +326,7 @@
         <CursorPos X="6" Y="3"/>
         <TopLine Value="1"/>
         <EditorIndex Value="3"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit30>
@@ -336,7 +336,7 @@
         <UnitName Value="KM_Player"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit31>
       <Unit32>
@@ -345,7 +345,7 @@
         <UnitName Value="KM_PlayerAI"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit32>
       <Unit33>
@@ -354,7 +354,7 @@
         <UnitName Value="KM_PlayersCollection"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit33>
       <Unit34>
@@ -363,7 +363,7 @@
         <UnitName Value="KM_RenderUI"/>
         <CursorPos X="13" Y="463"/>
         <TopLine Value="448"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit34>
       <Unit35>
@@ -373,7 +373,7 @@
         <CursorPos X="37" Y="614"/>
         <TopLine Value="599"/>
         <EditorIndex Value="9"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit35>
@@ -383,7 +383,7 @@
         <UnitName Value="KM_Settings"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit36>
       <Unit37>
@@ -392,7 +392,7 @@
         <UnitName Value="KM_SoundFX"/>
         <CursorPos X="14" Y="484"/>
         <TopLine Value="458"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit37>
       <Unit38>
@@ -402,7 +402,7 @@
         <CursorPos X="16" Y="259"/>
         <TopLine Value="242"/>
         <EditorIndex Value="5"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit38>
@@ -506,7 +506,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="7"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="23"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="LFM"/>
       </Unit52>
@@ -523,128 +523,132 @@
         <CursorPos X="1" Y="18"/>
         <TopLine Value="1"/>
         <EditorIndex Value="10"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="11"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="LFM"/>
       </Unit54>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="3149" Column="49" TopLine="3149"/>
+        <Caret Line="3328" Column="15" TopLine="3312"/>
       </Position1>
       <Position2>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="454" Column="19" TopLine="434"/>
+        <Caret Line="3359" Column="17" TopLine="3342"/>
       </Position2>
       <Position3>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="461" Column="3" TopLine="443"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="28" Column="22" TopLine="11"/>
       </Position3>
       <Position4>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="473" Column="3" TopLine="455"/>
+        <Filename Value="KM_Render.pas"/>
+        <Caret Line="83" Column="53" TopLine="72"/>
       </Position4>
       <Position5>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="582" Column="1" TopLine="564"/>
+        <Caret Line="3359" Column="18" TopLine="3342"/>
       </Position5>
       <Position6>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="601" Column="53" TopLine="584"/>
+        <Caret Line="3358" Column="20" TopLine="3341"/>
       </Position6>
       <Position7>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="632" Column="3" TopLine="613"/>
-      </Position7>
-      <Position8>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="644" Column="4" TopLine="626"/>
-      </Position8>
-      <Position9>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="736" Column="4" TopLine="706"/>
-      </Position9>
-      <Position10>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="1853" Column="1" TopLine="1833"/>
-      </Position10>
-      <Position11>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="3428" Column="30" TopLine="3428"/>
-      </Position11>
-      <Position12>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="3099" Column="1" TopLine="3084"/>
-      </Position12>
-      <Position13>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="25" Column="45" TopLine="8"/>
-      </Position13>
-      <Position14>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="3328" Column="15" TopLine="3312"/>
-      </Position14>
-      <Position15>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="3359" Column="17" TopLine="3342"/>
-      </Position15>
-      <Position16>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="28" Column="22" TopLine="11"/>
-      </Position16>
-      <Position17>
-        <Filename Value="KM_Render.pas"/>
-        <Caret Line="83" Column="53" TopLine="72"/>
-      </Position17>
-      <Position18>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="3359" Column="18" TopLine="3342"/>
-      </Position18>
-      <Position19>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="3358" Column="20" TopLine="3341"/>
-      </Position19>
-      <Position20>
         <Filename Value="KM_CommonTypes.pas"/>
         <Caret Line="252" Column="26" TopLine="235"/>
-      </Position20>
-      <Position21>
+      </Position7>
+      <Position8>
         <Filename Value="KM_Terrain.pas"/>
         <Caret Line="1383" Column="7" TopLine="1372"/>
-      </Position21>
-      <Position22>
+      </Position8>
+      <Position9>
         <Filename Value="KM_Houses.pas"/>
         <Caret Line="11" Column="32" TopLine="1"/>
-      </Position22>
-      <Position23>
+      </Position9>
+      <Position10>
         <Filename Value="KM_Unit1.lfm"/>
         <Caret Line="18" Column="23" TopLine="2"/>
-      </Position23>
-      <Position24>
+      </Position10>
+      <Position11>
         <Filename Value="KM_Unit1.lfm"/>
         <Caret Line="206" Column="13" TopLine="195"/>
+      </Position11>
+      <Position12>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="70" Column="19" TopLine="61"/>
+      </Position12>
+      <Position13>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="226" Column="1" TopLine="209"/>
+      </Position13>
+      <Position14>
+        <Filename Value="KM_Unit1.dfm"/>
+        <Caret Line="213" Column="1" TopLine="196"/>
+      </Position14>
+      <Position15>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="56" Column="33" TopLine="53"/>
+      </Position15>
+      <Position16>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="278" Column="17" TopLine="267"/>
+      </Position16>
+      <Position17>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="669" Column="13" TopLine="645"/>
+      </Position17>
+      <Position18>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="264" Column="10" TopLine="259"/>
+      </Position18>
+      <Position19>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="249" Column="45" TopLine="248"/>
+      </Position19>
+      <Position20>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="180" Column="4" TopLine="160"/>
+      </Position20>
+      <Position21>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="184" Column="82" TopLine="160"/>
+      </Position21>
+      <Position22>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="712" Column="1" TopLine="686"/>
+      </Position22>
+      <Position23>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="221" Column="46" TopLine="217"/>
+      </Position23>
+      <Position24>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="220" Column="54" TopLine="217"/>
       </Position24>
       <Position25>
         <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="70" Column="19" TopLine="61"/>
+        <Caret Line="191" Column="1" TopLine="160"/>
       </Position25>
       <Position26>
         <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="226" Column="1" TopLine="209"/>
+        <Caret Line="222" Column="13" TopLine="198"/>
       </Position26>
       <Position27>
-        <Filename Value="KM_Unit1.dfm"/>
-        <Caret Line="213" Column="1" TopLine="196"/>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="699" Column="3" TopLine="682"/>
       </Position27>
       <Position28>
         <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="56" Column="33" TopLine="53"/>
+        <Caret Line="713" Column="14" TopLine="687"/>
       </Position28>
       <Position29>
         <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="278" Column="17" TopLine="267"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position29>
+      <Position30>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="191" Column="17" TopLine="175"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
