--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -8,7 +8,7 @@
       <TargetFileExt Value=".exe"/>
       <Title Value="KaM_Remake"/>
       <UseXPManifest Value="True"/>
-      <ActiveEditorIndexAtStart Value="9"/>
+      <ActiveEditorIndexAtStart Value="12"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -37,10 +37,10 @@
         <Filename Value="KaM_Remake.dpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KaM_Remake"/>
-        <CursorPos X="99" Y="7"/>
+        <CursorPos X="101" Y="13"/>
         <TopLine Value="1"/>
         <EditorIndex Value="9"/>
-        <UsageCount Value="60"/>
+        <UsageCount Value="61"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit0>
@@ -54,7 +54,7 @@
         <CursorPos X="1" Y="9"/>
         <TopLine Value="1"/>
         <EditorIndex Value="20"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit1>
@@ -75,7 +75,7 @@
         <CursorPos X="74" Y="735"/>
         <TopLine Value="722"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit3>
@@ -108,7 +108,7 @@
         <UnitName Value="KM_TGATexture"/>
         <CursorPos X="22" Y="66"/>
         <TopLine Value="48"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit7>
       <Unit8>
@@ -126,7 +126,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="19"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit9>
@@ -142,7 +142,7 @@
         <UnitName Value="KM_UnitActionGoInOut"/>
         <CursorPos X="30" Y="3"/>
         <TopLine Value="1"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit11>
       <Unit12>
@@ -152,7 +152,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="18"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit12>
@@ -163,7 +163,7 @@
         <CursorPos X="38" Y="74"/>
         <TopLine Value="53"/>
         <EditorIndex Value="4"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit13>
@@ -174,7 +174,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="15"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit14>
@@ -184,7 +184,7 @@
         <UnitName Value="KM_Units_WorkPlan"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit15>
       <Unit16>
@@ -193,7 +193,7 @@
         <UnitName Value="KM_UnitTaskDelivery"/>
         <CursorPos X="47" Y="29"/>
         <TopLine Value="18"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit16>
       <Unit17>
@@ -203,7 +203,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="16"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit17>
@@ -219,10 +219,10 @@
         <Filename Value="KM_Controls.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Controls"/>
-        <CursorPos X="1" Y="1"/>
+        <CursorPos X="1" Y="5"/>
         <TopLine Value="1"/>
         <EditorIndex Value="12"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit19>
@@ -232,7 +232,7 @@
         <UnitName Value="KM_Defaults"/>
         <CursorPos X="38" Y="33"/>
         <TopLine Value="23"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit20>
       <Unit21>
@@ -242,7 +242,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="13"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit21>
@@ -255,7 +255,7 @@
         <UnitName Value="KM_Form_Loading"/>
         <CursorPos X="37" Y="10"/>
         <TopLine Value="3"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit22>
       <Unit23>
@@ -265,7 +265,7 @@
         <CursorPos X="17" Y="625"/>
         <TopLine Value="613"/>
         <EditorIndex Value="2"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit23>
@@ -276,7 +276,7 @@
         <CursorPos X="5" Y="802"/>
         <TopLine Value="784"/>
         <EditorIndex Value="6"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit24>
@@ -287,7 +287,7 @@
         <CursorPos X="56" Y="17"/>
         <TopLine Value="1"/>
         <EditorIndex Value="7"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit25>
@@ -298,7 +298,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="8"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit26>
@@ -309,7 +309,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="10"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit27>
@@ -320,7 +320,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="11"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit28>
@@ -330,7 +330,7 @@
         <UnitName Value="KM_LoadLib"/>
         <CursorPos X="25" Y="60"/>
         <TopLine Value="48"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit29>
       <Unit30>
@@ -340,7 +340,7 @@
         <CursorPos X="6" Y="3"/>
         <TopLine Value="1"/>
         <EditorIndex Value="3"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit30>
@@ -351,7 +351,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="14"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit31>
@@ -361,7 +361,7 @@
         <UnitName Value="KM_PlayerAI"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit32>
       <Unit33>
@@ -370,7 +370,7 @@
         <UnitName Value="KM_PlayersCollection"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit33>
       <Unit34>
@@ -379,7 +379,7 @@
         <UnitName Value="KM_RenderUI"/>
         <CursorPos X="13" Y="463"/>
         <TopLine Value="448"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit34>
       <Unit35>
@@ -388,7 +388,7 @@
         <UnitName Value="KM_ResourceGFX"/>
         <CursorPos X="15" Y="1147"/>
         <TopLine Value="1128"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit35>
       <Unit36>
@@ -397,7 +397,7 @@
         <UnitName Value="KM_Settings"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit36>
       <Unit37>
@@ -407,7 +407,7 @@
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <EditorIndex Value="17"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit37>
@@ -418,7 +418,7 @@
         <CursorPos X="5" Y="1630"/>
         <TopLine Value="1612"/>
         <EditorIndex Value="5"/>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit38>
@@ -521,7 +521,7 @@
         <IsPartOfProject Value="True"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="54"/>
+        <UsageCount Value="55"/>
         <SyntaxHighlighter Value="LFM"/>
       </Unit52>
       <Unit53>
@@ -594,127 +594,123 @@
         <SyntaxHighlighter Value="Delphi"/>
       </Unit62>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="KM_Terrain.pas"/>
-        <Caret Line="882" Column="5" TopLine="867"/>
+        <Caret Line="1894" Column="14" TopLine="1893"/>
       </Position1>
       <Position2>
-        <Filename Value="KM_Terrain.pas"/>
-        <Caret Line="1249" Column="7" TopLine="1231"/>
-      </Position2>
-      <Position3>
-        <Filename Value="KM_Terrain.pas"/>
-        <Caret Line="1250" Column="7" TopLine="1232"/>
-      </Position3>
-      <Position4>
-        <Filename Value="KM_Terrain.pas"/>
-        <Caret Line="1909" Column="3" TopLine="1891"/>
-      </Position4>
-      <Position5>
-        <Filename Value="KM_Terrain.pas"/>
-        <Caret Line="1894" Column="14" TopLine="1893"/>
-      </Position5>
-      <Position6>
         <Filename Value="KM_CommonTypes.pas"/>
         <Caret Line="267" Column="37" TopLine="249"/>
-      </Position6>
-      <Position7>
+      </Position2>
+      <Position3>
         <Filename Value="KM_Game.pas"/>
         <Caret Line="660" Column="25" TopLine="649"/>
-      </Position7>
-      <Position8>
+      </Position3>
+      <Position4>
         <Filename Value="KM_InterfaceGamePlay.pas"/>
         <Caret Line="287" Column="1" TopLine="268"/>
+      </Position4>
+      <Position5>
+        <Filename Value="KM_DeliverQueue.pas"/>
+        <Caret Line="235" Column="3" TopLine="217"/>
+      </Position5>
+      <Position6>
+        <Filename Value="KM_DeliverQueue.pas"/>
+        <Caret Line="476" Column="29" TopLine="459"/>
+      </Position6>
+      <Position7>
+        <Filename Value="KM_DeliverQueue.pas"/>
+        <Caret Line="469" Column="13" TopLine="456"/>
+      </Position7>
+      <Position8>
+        <Filename Value="KM_DeliverQueue.pas"/>
+        <Caret Line="436" Column="1" TopLine="418"/>
       </Position8>
       <Position9>
         <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="235" Column="3" TopLine="217"/>
+        <Caret Line="52" Column="15" TopLine="36"/>
       </Position9>
       <Position10>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="476" Column="29" TopLine="459"/>
+        <Filename Value="KM_Player.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position10>
       <Position11>
         <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="469" Column="13" TopLine="456"/>
+        <Caret Line="846" Column="1" TopLine="831"/>
       </Position11>
       <Position12>
         <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="436" Column="1" TopLine="418"/>
+        <Caret Line="111" Column="15" TopLine="105"/>
       </Position12>
       <Position13>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="52" Column="15" TopLine="36"/>
-      </Position13>
-      <Position14>
-        <Filename Value="KM_Player.pas"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
-      </Position14>
-      <Position15>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="846" Column="1" TopLine="831"/>
-      </Position15>
-      <Position16>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="111" Column="15" TopLine="105"/>
-      </Position16>
-      <Position17>
         <Filename Value="KM_Unit1.pas"/>
         <Caret Line="651" Column="5" TopLine="648"/>
-      </Position17>
-      <Position18>
+      </Position13>
+      <Position14>
         <Filename Value="KM_Unit1.pas"/>
         <Caret Line="74" Column="106" TopLine="71"/>
-      </Position18>
-      <Position19>
+      </Position14>
+      <Position15>
         <Filename Value="KM_CommonTypes.pas"/>
         <Caret Line="213" Column="46" TopLine="203"/>
-      </Position19>
-      <Position20>
+      </Position15>
+      <Position16>
         <Filename Value="KM_UnitActionStay.pas"/>
         <Caret Line="30" Column="27" TopLine="26"/>
-      </Position20>
-      <Position21>
+      </Position16>
+      <Position17>
         <Filename Value="KM_SoundFX.pas"/>
         <Caret Line="346" Column="3" TopLine="330"/>
-      </Position21>
-      <Position22>
+      </Position17>
+      <Position18>
         <Filename Value="KM_Utils.pas"/>
         <Caret Line="95" Column="28" TopLine="82"/>
-      </Position22>
-      <Position23>
+      </Position18>
+      <Position19>
         <Filename Value="KM_Units.pas"/>
         <Caret Line="1744" Column="3" TopLine="1726"/>
-      </Position23>
-      <Position24>
+      </Position19>
+      <Position20>
         <Filename Value="KM_Player.pas"/>
         <Caret Line="422" Column="23" TopLine="406"/>
-      </Position24>
-      <Position25>
+      </Position20>
+      <Position21>
         <Filename Value="KM_DeliverQueue.pas"/>
         <Caret Line="860" Column="1" TopLine="827"/>
-      </Position25>
-      <Position26>
+      </Position21>
+      <Position22>
         <Filename Value="KM_Controls.pas"/>
         <Caret Line="266" Column="67" TopLine="250"/>
-      </Position26>
-      <Position27>
+      </Position22>
+      <Position23>
         <Filename Value="KM_LoadDAT.pas"/>
         <Caret Line="148" Column="35" TopLine="144"/>
-      </Position27>
-      <Position28>
+      </Position23>
+      <Position24>
         <Filename Value="KM_InterfaceMapEditor.pas"/>
         <Caret Line="814" Column="5" TopLine="796"/>
-      </Position28>
-      <Position29>
+      </Position24>
+      <Position25>
         <Filename Value="KM_InterfaceMainMenu.pas"/>
         <Caret Line="710" Column="1" TopLine="692"/>
-      </Position29>
-      <Position30>
+      </Position25>
+      <Position26>
         <Filename Value="KaM_Remake.dpr"/>
         <Caret Line="26" Column="54" TopLine="13"/>
-      </Position30>
+      </Position26>
+      <Position27>
+        <Filename Value="KM_Controls.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position27>
+      <Position28>
+        <Filename Value="KM_Controls.pas"/>
+        <Caret Line="268" Column="1" TopLine="250"/>
+      </Position28>
+      <Position29>
+        <Filename Value="KM_Controls.pas"/>
+        <Caret Line="1122" Column="24" TopLine="1110"/>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
